update optimizer config

--- a/hn_predictor/src/optimizer.config
+++ b/hn_predictor/src/optimizer.config
@@ -3,6 +3,7 @@
     "parameters": {
         "num_leaves": {"type": "discrete", "values": [11, 101]},
         "n_estimators": {"type": "discrete", "values": [100, 1000]},
+        "learning_rate": {"type": "discrete", "values": [0.01, 0.1]}
     },
     "spec": {
         "metric": "valid_rmse",
